# interview-help

./: README.md
backend/: .env  .env.example  .gitignore  Dockerfile  devin.config.json  fly.toml  go.mod  go.sum  main.go  pyproject.toml  render.yaml  requirements.txt
backend/app/: main.py
backend/config/: config.go
backend/handlers/: interviews.go  services.go
backend/internal/models/: models.go
backend/middleware/: cors.go  error.go
backend/models/: models.go
frontend/: .env  package-lock.json  package.json  static.json  tailwind.config.js  vite.config.ts
frontend/public/: _redirects  robots.txt  sitemap.xml
frontend/src/: App.tsx
frontend/src/components/interview/: InterviewForm.tsx  InterviewList.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx
frontend/src/components/seo/: SEOHead.tsx
frontend/src/components/service/: ServiceList.tsx
frontend/src/pages/: HomePage.tsx  UploadPage.tsx
frontend/src/services/: api.ts  types.ts
